syntax = "proto3";

import "proto/logic/database/mysql_database_table.proto";

message PlayerAllData {
  player_database player_database_data = 2;
  player_database_1 player_database_1_data = 3;
}
